[metadata]
name = streaming-dumping-everything
version = 0.0.1
license = LGPL2
license_file = LICENSE
platform = linux

[options]
include_package_data = True
#packages =
install_requires =
	yt-dlp==2024.11.4
	selenium==4.18.1
	beautifulsoup4==4.12.3
	requests==2.31.0
	multiprocess==0.70.17
python_requires = >=3.12
zip_safe = no